--- a/app/views/listtasks/show.html.erb
+++ b/app/views/listtasks/show.html.erb
@@ -10,6 +10,17 @@
   <%= @listtask.description %>
 </p>
 
+<h2>Tasks:</h2>
+<%= @listtask.tasks.each do |task| %>
+    <%= task.name %> |
+    <%= task.description %>|
+    <%= task.state %> |
+    <%= task.priority %> |
+<% end %>
 
+<br />
 <%= link_to 'Edit', edit_listtask_path(@listtask) %> |
 <%= link_to 'Back', listtasks_path %>
+<br />
+<%= link_to 'Add Task',new_listtask_task_path(@listtask) %>
+<br />
