--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -26,5 +26,5 @@
 </p>
 
 
-<%= link_to 'Edit', edit_task_path(@task) %> |
-<%= link_to 'Back', tasks_path %>
+<%= link_to 'Edit', edit_listtask_task_path(@list,@task) %> |
+<%= link_to 'Back', listtask_path(@list) %>
