--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -5,3 +5,58 @@
  *= require_self
  *= require_tree . 
 */
+* {
+    outline: 0;
+    border: 0;
+    padding: 0px;
+    margin: 0px;
+    vertical-align: middle;
+}
+
+html, body{
+    background-color: #87cefa;
+    color: #000000;
+    font-family: Verdana, Geneva, Arial, Helvetica, sans-serif;
+}
+
+#header{
+    background-color: blue;
+    color: yellow;
+    text-align: center;
+    padding: 10px;
+}
+
+.container{
+    background: none repeat scroll 0 0 #ffffff;
+    margin: 0 auto;
+    /*width: 960px;*/
+}
+
+#auth_form{
+    background-color: #87cefa;
+    text-align: center;
+    padding: 10px;
+    color: #000000;
+}
+
+#auth_form input{
+    height: 20px;
+    background: #fff;
+    border: 1px solid #b4b4b4;
+    font-size: 0.92em;
+    color: #000000;
+}
+
+#content{
+    background-color: #87cefa;
+}
+
+#footer{
+    height: 20px;
+    text-align: center;
+    color: yellow;
+    background-color: blue;
+    padding: 10px;
+    clear: left;
+    position: relative;
+}
