--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -1,20 +1,12 @@
-%h1
-  Sign up!
-= form_for @user do |f|
-  - if @user.errors.any?
-    .error_messages
-      %h2 Form is invalid
-      %ul
-        - for message in @user.errors.full_messages
-          %li= message
-  .field
-    = f.label :email
-    = f.text_field :email
-  .field
-    = f.label :password
-    = f.password_field :password
-  .field
-    = f.label :password_confirmation
-    = f.password_field :password_confirmation
-  .actions
-    = f.submit
+%h1 Sign up!
+- if @user.errors.any?
+  .alert-message.block-message.error
+    %h2 Form is invalid
+    %ul
+      - for message in @user.errors.full_messages
+        %li= message
+= form_for User.new do |f|
+  = f.email_field :email, :placeholder => 'email'
+  = f.password_field :password, :placeholder => 'password'
+  = f.password_field :password_confirmation, :placeholder => 'confirm'
+  = f.submit
