--- a/app/views/tasks/_form.html.haml
+++ b/app/views/tasks/_form.html.haml
@@ -20,7 +20,7 @@
   .field
     = f.label :state
     %br
-    = f.check_box :state
+    = f.enum_select :state
   .field
     = f.label :priority
     %br
