--- a/app/views/tasks/show.html.haml
+++ b/app/views/tasks/show.html.haml
@@ -1,26 +1,20 @@
-%p#notice
-  = notice
-
-%p
-  %b Listtask:
-  = @task.listtask_id
-
-%p
-  %b Name:
-  = @task.name
-
+.info
+  %span.label.success Project ->
+  %big= link_to @task.listtask.project.name, project_path(@project)
+  |
+  %span.label.success Listtask ->
+  %big= link_to @task.listtask.name, project_listtask_path(@listtask)
+  |
+  %span.label.success Task ->
+  %big #{@task.name}
 %p
   %b Description:
   = @task.description
-
 %p
   %b State:
   = @task.state
-
 %p
   %b Priority:
   = @task.priority
-
-
 = link_to 'Edit', edit_project_listtask_task_path(@project, @list, @task)
 = link_to 'Back', project_listtask_path(@project, @list)
