--- a/app/views/listtasks/show.html.haml
+++ b/app/views/listtasks/show.html.haml
@@ -1,6 +1,6 @@
 .info
   %span.label.success Project ->
-  %big= link_to @listtask.project.name, project_path(@project)
+  %big= link_to @listtask.project.name, project_path(@listtask.project)
   |
   %span.label.success Listtask ->
   %big #{@listtask.name}
@@ -29,18 +29,18 @@ Show
     - @tasks.each do |task|
       %tr
         %td
-          = link_to task.name, project_listtask_task_path(@project, @listtask, task)
+          = link_to task.name, project_listtask_task_path(@listtask.project, @listtask, task)
           %br
-          = link_to 'Edit', edit_project_listtask_task_path(@project, @listtask, task)
+          = link_to 'Edit', edit_project_listtask_task_path(@listtask.project, @listtask, task)
           |
-          = link_to 'Destroy', project_listtask_task_path(@project, @listtask, task), confirm: 'Are you sure?', method: :delete
+          = link_to 'Destroy', project_listtask_task_path(@listtask.project, @listtask, task), confirm: 'Are you sure?', method: :delete
         %td= task.description
         %td= task.state
         %td= task.priority
 
 %br
-= link_to 'Edit', edit_project_listtask_path(@project,@listtask)
+= link_to 'Edit', edit_project_listtask_path(@listtask.project,@listtask)
 |
-= link_to 'Delete', project_listtask_path(@project,@listtask), confirm: 'Are you sure?', method: :delete
+= link_to 'Delete', project_listtask_path(@listtask.project,@listtask), confirm: 'Are you sure?', method: :delete
 |
-= link_to 'Back', project_path(@project)
+= link_to 'Back', project_path(@listtask.project)
