--- a/app/views/projects/index.html.haml
+++ b/app/views/projects/index.html.haml
@@ -19,12 +19,14 @@
           = link_to 'Destroy', project, confirm: 'Are you sure?', method: :delete
       %td{:style =>"width: 40%"}
         = project.description
-      %td{:style =>"width: 15%"}
+      %td{:style =>"width: 15%; text-align: center"}
         = count_listtask_in_project(project)
       %td{:style =>"width: 20%"}
         %p
-          - project.users.each do |user|
-            = user.email
-            = link_to "(drop)", project_invite_path(project,user.id), confirm: 'Are you sure?', method: :delete
+          = project.owner.email
+          - project.invited_user.each do |user|
+            - if user.id != project.owner.id
+              = user.email
+              = link_to "(drop)", project_invite_path(project,user.id), confirm: 'Are you sure?', method: :delete
         = link_to "Invite user", new_project_invite_path(project)
 
